--- a/demo.ipynb
+++ b/demo.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ui = Hyper_Parameter_Provenance(X_train, X_test, y_train, y_test, dataset_name)"
+    "demo = Hyper_Parameter_Provenance(X_train, X_test, y_train, y_test, dataset_name)"
    ]
   },
   {
@@ -77,7 +77,7 @@
     }
    ],
    "source": [
-    "ui.init()"
+    "demo.init()"
    ]
   },
   {
